--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                tools:context=".MainActivity"
+                tools:ignore="ObsoleteLayoutParam,ScrollViewCount,SpUsage">
 
     <EditText
         android:text="@string/app_name"
@@ -46,7 +47,7 @@
         android:id="@+id/start"
         android:layout_below="@+id/message"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="35dp" />
 
     <Button
         android:textColor="@android:color/holo_green_dark"
